; ModuleID = '/home/carl/AnghaBench/linux/drivers/acpi/arm64/extr_iort.c_iort_node_map_platform_id.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/acpi/arm64/extr_iort.c_iort_node_map_platform_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.acpi_iort_node = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.acpi_iort_node* (%struct.acpi_iort_node*, i32*, i32, i32)* @iort_node_map_platform_id to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.acpi_iort_node* @iort_node_map_platform_id(%struct.acpi_iort_node* %0, i32* %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.acpi_iort_node*, align 8
  %6 = alloca %struct.acpi_iort_node*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.acpi_iort_node*, align 8
  %11 = alloca i32, align 4
  store %struct.acpi_iort_node* %0, %struct.acpi_iort_node** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %12 = load %struct.acpi_iort_node*, %struct.acpi_iort_node** %6, align 8
  %13 = load i32, i32* %9, align 4
  %14 = call %struct.acpi_iort_node* @iort_node_get_id(%struct.acpi_iort_node* %12, i32* %11, i32 %13)
  store %struct.acpi_iort_node* %14, %struct.acpi_iort_node** %10, align 8
  %15 = load %struct.acpi_iort_node*, %struct.acpi_iort_node** %10, align 8
  %16 = icmp ne %struct.acpi_iort_node* %15, null
  br i1 %16, label %18, label %17

17:                                               ; preds = %4
  store %struct.acpi_iort_node* null, %struct.acpi_iort_node** %5, align 8
  br label %41

18:                                               ; preds = %4
  %19 = load %struct.acpi_iort_node*, %struct.acpi_iort_node** %10, align 8
  %20 = getelementptr inbounds %struct.acpi_iort_node, %struct.acpi_iort_node* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @IORT_TYPE_MASK(i32 %21)
  %23 = load i32, i32* %8, align 4
  %24 = and i32 %22, %23
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %32, label %26

26:                                               ; preds = %18
  %27 = load %struct.acpi_iort_node*, %struct.acpi_iort_node** %10, align 8
  %28 = load i32, i32* %11, align 4
  %29 = load i32*, i32** %7, align 8
  %30 = load i32, i32* %8, align 4
  %31 = call %struct.acpi_iort_node* @iort_node_map_id(%struct.acpi_iort_node* %27, i32 %28, i32* %29, i32 %30)
  store %struct.acpi_iort_node* %31, %struct.acpi_iort_node** %10, align 8
  br label %39

32:                                               ; preds = %18
  %33 = load i32*, i32** %7, align 8
  %34 = icmp ne i32* %33, null
  br i1 %34, label %35, label %38

35:                                               ; preds = %32
  %36 = load i32, i32* %11, align 4
  %37 = load i32*, i32** %7, align 8
  store i32 %36, i32* %37, align 4
  br label %38

38:                                               ; preds = %35, %32
  br label %39

39:                                               ; preds = %38, %26
  %40 = load %struct.acpi_iort_node*, %struct.acpi_iort_node** %10, align 8
  store %struct.acpi_iort_node* %40, %struct.acpi_iort_node** %5, align 8
  br label %41

41:                                               ; preds = %39, %17
  %42 = load %struct.acpi_iort_node*, %struct.acpi_iort_node** %5, align 8
  ret %struct.acpi_iort_node* %42
}

declare dso_local %struct.acpi_iort_node* @iort_node_get_id(%struct.acpi_iort_node*, i32*, i32) #1

declare dso_local i32 @IORT_TYPE_MASK(i32) #1

declare dso_local %struct.acpi_iort_node* @iort_node_map_id(%struct.acpi_iort_node*, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
